[gd_scene load_steps=14 format=2]

[ext_resource path="res://Telas/FundoTela2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/TartarugaDificil.png" type="Texture" id=2]
[ext_resource path="res://Fonte/NicoBold/NicoBold-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Cenas/Scripts/EscolhaInGame.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Hoverdificil.png" type="Texture" id=5]
[ext_resource path="res://Sprites/tartarugaFacil.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Hoverfacil.png" type="Texture" id=7]
[ext_resource path="res://Sprites/TatarugaMedio.png" type="Texture" id=8]
[ext_resource path="res://Sprites/HOvermedio.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 55
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 55
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 70
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="EscolhaInGame" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -606.666, 152.296 )
scale = Vector2( 6.66666, 6.67887 )
texture = ExtResource( 1 )
offset = Vector2( 187, 31 )

[node name="BotaoFacil" type="TextureButton" parent="."]
margin_left = 72.0
margin_top = 240.0
margin_right = 432.0
margin_bottom = 600.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="BotaoMedio" type="TextureButton" parent="."]
margin_left = 448.0
margin_top = 240.0
margin_right = 808.0
margin_bottom = 600.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="BotaoDificil" type="TextureButton" parent="."]
margin_left = 832.0
margin_top = 240.0
margin_right = 1192.0
margin_bottom = 600.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="ldfacil" type="Label" parent="."]
margin_left = 144.0
margin_top = 184.0
margin_right = 343.0
margin_bottom = 265.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Fácil"
align = 1
valign = 1

[node name="ldmedio" type="Label" parent="."]
margin_left = 512.0
margin_top = 176.0
margin_right = 768.0
margin_bottom = 264.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Médio"
align = 1
valign = 1

[node name="lddificil" type="Label" parent="."]
margin_left = 920.0
margin_top = 184.0
margin_right = 1128.0
margin_bottom = 273.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Difícil"
align = 1
valign = 1

[node name="Dificuldade" type="Label" parent="."]
margin_left = 384.0
margin_top = 42.0
margin_right = 898.0
margin_bottom = 162.0
custom_colors/font_color = Color( 0.929688, 0.929688, 0.686371, 1 )
custom_fonts/font = SubResource( 4 )
text = "Dificuldade"
align = 1
valign = 1

[connection signal="pressed" from="BotaoFacil" to="." method="_on_BotaoFacil_pressed"]
[connection signal="pressed" from="BotaoMedio" to="." method="_on_BotaoMedio_pressed"]
[connection signal="pressed" from="BotaoDificil" to="." method="_on_BotaoDificil_pressed"]
